Entrega final Desarrollo Web

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -46,7 +46,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Custom X Camber Snowboard</h5>
                                 <p class="card-text py-2">$439.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/hps-takaharu-nakai-lg8279.html#color=95140" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Photon BOA® Snowboard Boots</h5>
                                 <p class="card-text py-2">$419.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/launch-lace-boa-fs-2000.html#color=102330 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Malavita EST® Snowboard Bindings</h5>
                                 <p class="card-text py-2">$439.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/highlander-1.html#color=75185 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                             <div class="card-body ">
                                 <h5 class="card-title">ANON WM3 GOGGLES + BONUS LENS + MFI® FACE MASK</h5>
                                 <p class="card-text py-2">$237.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/radium-prime-sigma-lg7998.html#color=104154 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -94,7 +94,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Custom X Camber Snowboard</h5>
                                 <p class="card-text py-2">$439.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/hps-takaharu-nakai-lg8279.html#color=95140" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos ipsa labore tempora veniam</h5>
                                 <p class="card-text py-2">$609.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/huck-knife-pro-ltd-li3759.html#color=98025 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Women's Burton Feelgood Camber Snowboard</h5>
                                 <p class="card-text py-2">$839.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/assassin-li3450.html#color=103668 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                             <div class="card-body ">
                                 <h5 class="card-title">Men's Burton Ion BOA® Snowboard Boots</h5>
                                 <p class="card-text py-2">$669.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/assassin-pro-li3451.html#color=105168 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Photon BOA® Snowboard Boots</h5>
                                 <p class="card-text py-2">$419.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/launch-lace-boa-fs-2000.html#color=102330 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Ruler BOA® Snowboard Boots</h5>
                                 <p class="card-text py-2">$329.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/launch-boa-sj-boa-lg8758.html#color=102564 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Moto BOA® Snowboard Boots</h5>
                                 <p class="card-text py-2">$249.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/trek-lg8695.html#color=102939" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                             <div class="card-body ">
                                 <h5 class="card-title">Men's Burton Ion BOA® Snowboard Boots</h5>
                                 <p class="card-text py-2">$619.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/launch-lace-boa-sj-1.html#color=105570" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Malavita EST® Snowboard Bindings</h5>
                                 <p class="card-text py-2">$439.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/highlander-1.html#color=75185" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton Genesis EST® Snowboard Bindings</h5>
                                 <p class="card-text py-2">$429.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/hologram-lg8275.html#color=105813" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -208,7 +208,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Men's Burton X EST® Snowboard Bindings</h5>
                                 <p class="card-text py-2">$359.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/district-pro-team-li3582.html#color=106281 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                             <div class="card-body ">
                                 <h5 class="card-title">Men's Burton Cartel Re:Flex Snowboard Bindings</h5>
                                 <p class="card-text py-2">$739.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/district-hps-lg8317.html#color=94333 " target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">ANON WM3 GOGGLES + BONUS LENS + MFI® FACE MASK</h5>
                                 <p class="card-text py-2">$237.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/radium-prime-sigma-lg7998.html#color=104154" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">ANON M4S GOGGLES (TORIC) + BONUS LENS + MFI® FACE MASK</h5>
                                 <p class="card-text py-2">$559.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href=" https://www.salomon.com/en-int/shop-int/product/radium-pro-multilayer-lg8001.html#color=94717" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">ANON M4 GOGGLES (TORIC) + BONUS LENS + MFI® FACE MASK</h5>
                                 <p class="card-text py-2">$319.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/s-view-sigma-1.html#color=92821" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                             <div class="card-body ">
                                 <h5 class="card-title">ANON M4 GOGGLES (CYLINDRICAL) + BONUS LENS + MFI® FACE MASK</h5>
                                 <p class="card-text py-2">$419.95</p>
-                                <a href=" " target="" class="btn btn-primary">Comprar</a>
+                                <a href="https://www.salomon.com/en-int/shop-int/product/aksium-2-0-access-asian-fit-li3622.html#color=103902" target="_blank" class="btn btn-primary">Comprar</a>
                             </div>
                         </div>
                     </div>
